@@ -25,6 +25,7 @@ lib/WTSI/DNAP/Warehouse/Schema/Result/IseqRunStatus.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/IseqRunStatusDict.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/OseqFlowcell.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/PacBioRun.pm
+lib/WTSI/DNAP/Warehouse/Schema/Result/ProductIrod.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/QcResult.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/Sample.pm
 lib/WTSI/DNAP/Warehouse/Schema/Result/SchemaMigration.pm
